--- a/index.html
+++ b/index.html
@@ -14,52 +14,56 @@
         media="screen">  
   </head>
 
-  <body>
-    <div class="aaa">
-      <img src="./eisenhower-matrix.jpg">
-      <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+  <body class="body">
+    <div class="wrapper header">
+      <img class="header__image" src="./eisenhower-matrix.jpg">
+      <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
-    <div class="centered-main-page-element">
-      <p id="topSectionForAddingElementToList">
-        <label for="new-task">Add Item</label>
-      </p>
-      <div class="task-row-wrapper">
-        <input id="new-task" class="task" type="text">
-        <button>Add</button>
+    <div class="wrapper main">
+      <div class="todo todo-add">
+          <h3 class="todo__caption todo-add__caption">Add Item</h3>
+        <div class="todo__task">
+          <input class="task task__text todo-add__text" type="text">
+          <button class="task__button">Add</button>
+        </div>
       </div>
-      <h3>Todo</h3>
-      <ul id="incompleteTasks">
-        <li>
-          <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg">
-          </button>
-        </li>
-        <li class="editMode">
-          <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
-          <button class="edit">Save</button>
-          <button class="delete">
-            <img src="./remove.svg">
-          </button>
-        </li>
-      </ul>
-      <h3>Completed</h3>
-      <ul id="completed-tasks">
-        <li>
-          <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg">
-          </button>
-        </li>
-      </ul>
+      <div class="todo todo-schedule">
+        <h3 class="todo__caption todo-schedule__caption">Todo</h3>
+        <ul class="todo__list todo-schedule__list">
+          <li class="todo__task">
+            <input class="task__checkbox" type="checkbox">
+            <label class="task task__label">Pay Bills</label>
+            <input class="task task__text" type="text">
+            <button class="task__button task__button_edit">Edit</button>
+            <button class="task__button task__button_delete">
+              <img class="button__image_delete" src="./remove.svg">
+            </button>
+          </li>
+          <li class="todo__task todo__task_edit">
+            <input class="task__checkbox" type="checkbox">
+            <label class="task task__label">Go Shopping</label>
+            <input class="task task__text" type="text" value="Go Shopping">
+            <button class="task__button task__button_edit">Save</button>
+            <button class="task__button task__button_delete">
+              <img class="button__image_delete" src="./remove.svg">
+            </button>
+          </li>
+        </ul>
+      </div>
+      <div class="todo todo-completed">
+        <h3 class="todo__caption">Completed</h3>
+        <ul class="todo__list todo-completed__list">
+          <li class="todo__task">
+            <input class="task__checkbox" type="checkbox" checked>
+            <label class="task task__label">See the Doctor</label>
+            <input class="task task__text" type="text">
+            <button class="task__button task__button_edit">Edit</button>
+            <button class="task__button task__button_delete">
+              <img class="button__image_delete" src="./remove.svg">
+            </button>
+          </li>
+        </ul>
+      </div>
     </div>
     <script src="app.js"></script>
   </body>
