--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body class="body">
     <h1 class="visually-hidden">Task "Clean Code S1E1"</h1>
     <header class="wrapper header">
-      <img class="header__image" src="./eisenhower-matrix.jpg">
+      <img class="header__image" src="./eisenhower-matrix.jpg" alt="the eisenhower matrix">
       <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main class="wrapper main">
@@ -38,7 +38,7 @@
               <input class="task task__text" type="text">
               <button class="task__button task__button_edit">Edit</button>
               <button class="task__button task__button_delete">
-                <img class="button__image_delete" src="./remove.svg">
+                <img class="button__image_delete" src="./remove.svg" alt="delete task">
               </button>
             </div>
           </li>
@@ -49,7 +49,7 @@
               <input class="task task__text" type="text" value="Go Shopping">
               <button class="task__button task__button_edit">Save</button>
               <button class="task__button task__button_delete">
-                <img class="button__image_delete" src="./remove.svg">
+                <img class="button__image_delete" src="./remove.svg" alt="delete task">
               </button>
             </div>
           </li>
@@ -65,7 +65,7 @@
               <input class="task task__text" type="text">
               <button class="task__button task__button_edit">Edit</button>
               <button class="task__button task__button_delete">
-                <img class="button__image_delete" src="./remove.svg">
+                <img class="button__image_delete" src="./remove.svg" alt="delete task">
               </button>
             </div>
           </li>
